--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Payment Successful"
+        android:text="Receipt"
         android:layout_margin="20dp"
         android:textColor="@color/white"
         android:textSize="30dp"
@@ -35,11 +35,22 @@
         android:src="@drawable/success"/>
 
     <TextView
-        android:id="@+id/receiver"
+        android:id="@+id/sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/successTick"
+        android:layout_margin="20dp"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/receiver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/sender"
         android:layout_margin="20dp"
         android:textColor="@color/white"
         android:textSize="20dp"
@@ -66,4 +77,19 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/done"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_below="@id/updatedBal"
+        android:text="Done"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textColor="#030450"
+        android:backgroundTint="@color/white"
+        android:layout_centerHorizontal="true"/>
+
+
 </RelativeLayout>
