--- a/app/src/main/res/layout/activity_balance_history.xml
+++ b/app/src/main/res/layout/activity_balance_history.xml
@@ -58,4 +58,29 @@
         android:gravity="center"
         android:layout_margin="20dp"/>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/transactionCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        android:layout_below="@id/TransactioHistoryText">
+
+        <TextView
+            android:id="@+id/receiverT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:layout_marginStart="40dp"/>
+        <TextView
+            android:id="@+id/deductA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="40dp"/>
+
+
+    </androidx.cardview.widget.CardView>
+
 </RelativeLayout>
