--- a/app/src/main/res/layout/activity_dth_recharge.xml
+++ b/app/src/main/res/layout/activity_dth_recharge.xml
@@ -3,22 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#030450"
     android:layout_height="match_parent"
-    tools:context=".ToPhoneActivity">
+    android:background="#030450"
+    tools:context=".DthRecharge">
 
     <ImageButton
-        android:id="@+id/backPhone"
+        android:id="@+id/backD"
+        android:layout_margin="10dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="20dp"
         android:background="@drawable/back_button"/>
-
     <TextView
-        android:id="@+id/phoneTitle"
+        android:id="@+id/dthTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send Money to Any Phone Number"
+        android:text="DTH Bill Recharge"
         android:textSize="25dp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
@@ -27,50 +26,53 @@
         android:gravity="center"/>
 
     <TextView
-        android:id="@+id/phoneText"
+        android:id="@+id/operatorTextD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Phone Number"
-        android:layout_below="@+id/backPhone"
+        android:text="Select DTH operator"
+        android:layout_below="@+id/dthTitle"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"/>
 
-    <EditText
-        android:id="@+id/phonenumber"
-        android:layout_width="match_parent"
+    <Spinner
+        android:id="@+id/operatorD"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/phoneText"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="#30ffffff"
-        android:hint="Enter Phone Number"
+        android:background="@color/white"
+        android:layout_marginTop="120dp"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
-    <EditText
-        android:id="@+id/amtSend"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/packTextD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/phonenumber"
-        android:layout_marginStart="20dp"
+        android:text="Select DTH pack of Rs."
+        android:layout_below="@+id/operatorD"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="#30ffffff"
-        android:hint="Enter Amount to Send"
-        android:padding="20dp"
+        android:layout_marginStart="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+
+    <Spinner
+        android:id="@+id/packD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_below="@id/packTextD"
+        android:layout_marginTop="20dp"
+        android:padding="20dp"
+        android:layout_centerHorizontal="true"/>
+
     <EditText
-        android:id="@+id/upi2"
+        android:id="@+id/upiD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/amtSend"
+        android:layout_below="@id/packD"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -79,19 +81,21 @@
         android:hint="Enter UPI Pin"
         android:padding="20dp"
         android:textColor="@color/white"
+        android:inputType="textPassword"
         android:textColorHint="@color/white" />
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/sendbtn"
+        android:id="@+id/paybtnD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/upi2"
+        android:layout_below="@id/upiD"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="#f1faee"
-        android:text="Send"
+        android:text="Pay"
         android:textColor="#030450"
         android:textSize="25sp" />
+
 </RelativeLayout>
