--- a/app/src/main/res/layout/activity_electricity_recharge.xml
+++ b/app/src/main/res/layout/activity_electricity_recharge.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:background="#030450"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ToPhoneActivity">
+    tools:context=".ElectricityRecharge">
 
     <ImageButton
-        android:id="@+id/backPhone"
+        android:id="@+id/backE"
+        android:layout_margin="10dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="20dp"
         android:background="@drawable/back_button"/>
-
     <TextView
-        android:id="@+id/phoneTitle"
+        android:id="@+id/electricityTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send Money to Any Phone Number"
+        android:text="Electricity Bill Recharge"
         android:textSize="25dp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
@@ -27,36 +27,31 @@
         android:gravity="center"/>
 
     <TextView
-        android:id="@+id/phoneText"
+        android:id="@+id/boardText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Phone Number"
-        android:layout_below="@+id/backPhone"
+        android:text="Select Electricity Board:"
+        android:layout_below="@+id/electricityTitle"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"/>
 
-    <EditText
-        android:id="@+id/phonenumber"
-        android:layout_width="match_parent"
+    <Spinner
+        android:id="@+id/operatorE"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/phoneText"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="#30ffffff"
-        android:hint="Enter Phone Number"
+        android:background="@color/white"
+        android:layout_marginTop="120dp"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:layout_centerHorizontal="true"/>
+
     <EditText
-        android:id="@+id/amtSend"
+        android:id="@+id/amtSendE"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/phonenumber"
+        android:layout_below="@id/operatorE"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -67,10 +62,10 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
     <EditText
-        android:id="@+id/upi2"
+        android:id="@+id/upi2E"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/amtSend"
+        android:layout_below="@id/amtSendE"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -79,12 +74,13 @@
         android:hint="Enter UPI Pin"
         android:padding="20dp"
         android:textColor="@color/white"
+        android:inputType="textPassword"
         android:textColorHint="@color/white" />
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/sendbtn"
+        android:id="@+id/sendbtnE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/upi2"
+        android:layout_below="@id/upi2E"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
@@ -94,4 +90,5 @@
         android:text="Send"
         android:textColor="#030450"
         android:textSize="25sp" />
+
 </RelativeLayout>
