--- a/app/src/main/res/layout/activity_electricity_recharge.xml
+++ b/app/src/main/res/layout/activity_electricity_recharge.xml
@@ -38,14 +38,16 @@
         android:textSize="20dp"
         android:textStyle="bold"/>
 
+
     <Spinner
         android:id="@+id/operatorE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginTop="120dp"
+        android:layout_centerHorizontal="true"
         android:padding="20dp"
-        android:layout_centerHorizontal="true"/>
+        android:background="@drawable/spinner_custom" />
+
 
     <EditText
         android:id="@+id/amtSendE"
