--- a/app/src/main/res/layout/activity_balance_history.xml
+++ b/app/src/main/res/layout/activity_balance_history.xml
@@ -46,14 +46,43 @@
         android:textSize="30dp"
         android:textColor="@color/white"
         android:gravity="center"
-        android:layout_margin="20dp"/>
+        android:layout_margin="15dp"/>
+
+    <EditText
+        android:id="@+id/addBalance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/balance"
+        android:hint="Enter Money to add"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:background="#30ffffff"
+        android:inputType="numberDecimal"
+        android:drawableLeft="@drawable/baseline_attach_money_24"
+        android:drawablePadding="15dp"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/addMoney"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addBalance"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:backgroundTint="#f1faee"
+        android:text="Add Money"
+        android:textColor="#030450"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/TransactioHistoryText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Transaction History"
-        android:layout_below="@+id/balance"
+        android:layout_below="@+id/addMoney"
         android:textSize="25dp"
         android:textColor="@color/white"
         android:gravity="center"
