--- a/app/src/main/res/layout/activity_electricity_recharge.xml
+++ b/app/src/main/res/layout/activity_electricity_recharge.xml
@@ -62,7 +62,9 @@
         android:hint="Enter Amount to Send"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:drawableLeft="@drawable/baseline_attach_money_24"
+        android:drawablePadding="15dp"/>
     <EditText
         android:id="@+id/upi2E"
         android:layout_width="match_parent"
@@ -77,7 +79,9 @@
         android:padding="20dp"
         android:textColor="@color/white"
         android:inputType="textPassword"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:drawableLeft="@drawable/baseline_password_24"
+        android:drawablePadding="15dp"/>
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sendbtnE"
         android:layout_width="wrap_content"
