--- a/app/src/main/res/layout/activity_to_contacts.xml
+++ b/app/src/main/res/layout/activity_to_contacts.xml
@@ -73,6 +73,7 @@
         android:hint="Enter UPI Pin"
         android:padding="20dp"
         android:textColor="@color/white"
+        android:inputType="textPassword"
         android:textColorHint="@color/white" />
 
     <com.google.android.material.button.MaterialButton
