--- a/app/src/main/res/layout/activity_to_phone.xml
+++ b/app/src/main/res/layout/activity_to_phone.xml
@@ -51,7 +51,9 @@
         android:hint="Enter Phone Number"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:drawableLeft="@drawable/baseline_phone_24"
+        android:drawablePadding="10dp"/>
     <EditText
         android:id="@+id/amtSend"
         android:layout_width="match_parent"
@@ -65,7 +67,9 @@
         android:hint="Enter Amount to Send"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:drawableLeft="@drawable/baseline_attach_money_24"
+        android:drawablePadding="10dp"/>
     <EditText
         android:id="@+id/upi2"
         android:layout_width="match_parent"
@@ -79,7 +83,10 @@
         android:hint="Enter UPI Pin"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:inputType="textPassword"
+        android:drawableLeft="@drawable/baseline_password_24"
+        android:drawablePadding="10dp"/>
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sendbtn"
         android:layout_width="wrap_content"
