modified UI for spinners used in respected files

--- a/app/src/main/res/layout/activity_to_contacts.xml
+++ b/app/src/main/res/layout/activity_to_contacts.xml
@@ -41,7 +41,7 @@
         android:id="@+id/cList"
         android:background="@color/white"
         android:layout_margin="15dp"
-        android:listSelector="#edede9"
+        android:listSelector="#adb5bd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recentText" />
