--- a/app/src/main/res/layout/activity_electricity_recharge.xml
+++ b/app/src/main/res/layout/activity_electricity_recharge.xml
@@ -45,8 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
-        android:padding="20dp"
-        android:background="@drawable/spinner_custom" />
+        android:padding="20dp"/>
 
 
     <EditText
